--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Tijani",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
     "parcel": "^2.8.3"
   },
   "devDependencies": {
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10"
   }
 }
