--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Tijani",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
     "parcel": "^2.8.3"
